AC_PREREQ(2.61)
AC_INIT([SDL_ILBM], m4_esyscmd([echo -n $(cat ./version)$VERSION_SUFFIX]))
AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE([1.7.2 -Wall -Werror -Wno-extra-portability])

# Checks for programs
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AM_PROG_CC_C_O
PKG_PROG_PKG_CONFIG
AC_PATH_PROG(HELP2MAN, help2man, false)

# Checks for libiff library
LIBIFF_REQUIRED=0.1
PKG_CHECK_MODULES(LIBIFF, libiff >= $LIBIFF_REQUIRED)
AC_SUBST(LIBIFF_CFLAGS)
AC_SUBST(LIBIFF_LIBS)

# Checks for libilbm library
LIBILBM_REQUIRED=0.1
PKG_CHECK_MODULES(LIBILBM, libilbm >= $LIBILBM_REQUIRED)
AC_SUBST(LIBILBM_CFLAGS)
AC_SUBST(LIBILBM_LIBS)

# Checks for libamivideo-sdl library
LIBAMIVIDEO_SDL_REQUIRED=0.1
PKG_CHECK_MODULES(LIBAMIVIDEO, libamivideo >= $LIBAMIVIDEO_SDL_REQUIRED)
AC_SUBST(LIBAMIVIDEO_SDL_CFLAGS)
AC_SUBST(LIBAMIVIDEO_SDL_LIBS)

# Checks for SDL library
SDL2_REQUIRED=2.0.0
PKG_CHECK_MODULES(SDL2, sdl2 >= $SDL2_REQUIRED)
AC_SUBST(SDL2_CFLAGS)
AC_SUBST(SDL2_LIBS)

# Output
AC_CONFIG_FILES([
Makefile
src/Makefile
src/SDL_ILBM.pc
src/SDL_ILBM/Makefile
src/ilbmviewer/Makefile
])
AC_OUTPUT
